--- a/templates/games.html
+++ b/templates/games.html
@@ -2,12 +2,17 @@
 {% block content %}
 <h1>All Game Reviews</h1>
 <div class="container">
+  <div class="row">
+  <div class="col s12">
   <ul class="collapsible">
     {% for game in games %}
       <li>
         <div class="collapsible-header">
+        
             <i class="material-icons">expand_more</i>
-            {{game.game_name}} - Rating: {{game.rating}}
+            <div class="col s12">
+            {{game.game_name}}<br> Rating: {{game.rating}}
+        </div>
         </div><!--Game Name & Rating-->
       <div class="collapsible-body">
         <div class="game_img">
@@ -51,6 +56,8 @@
     </li>
     {% endfor %}
   </ul>
+  </div>
+  </div>
 
 </div>
 {% endblock %}
