--- a/static/css/style.css
+++ b/static/css/style.css
@@ -55,7 +55,7 @@
      border-radius: 2%;
  }/*Form bg color, font color and border radius*/
 
-form .form-center-button{
+.center-button{
      color: white;
      border: 2px solid white;
      border-radius: 25px;
@@ -65,9 +65,17 @@ form .form-center-button{
 
  }/* font color,border,text aligning and button positioning for add review button*/
 
- .form-bg {
-     color: white;
- }/* red color behind the form */
+.confirmation-button {
+    margin-left: 30%;
+    margin-right: 30%;
+    width: 40%;
+    border: 2px solid white;
+    border-radius: 25px;
+    color: white;
+    background-color: black;
+    padding-bottom: 40px;
+    text-align: center
+}
 
  /*Games.html*/
  .collapsible-header {
@@ -83,11 +91,16 @@ form .form-center-button{
 
  .collapsible-body .game_img {
      border: 1px solid white;
+     margin-bottom: 10px;
  }
 
  .game_img img {
      width: 100%;
      height: 100%;
+ }
+
+ .description {
+     text-align: center;
  }
 
 .collapsible-body a {
