--- a/templates/base.html
+++ b/templates/base.html
@@ -33,8 +33,10 @@
 			</div>
 		</nav>
 	</header>
-	{% block content %}
-	{% endblock %}
+    <div class="container">
+	  {% block content %}
+	  {% endblock %}
+    </div>
 
 
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
